- Refactor: preparation for making AcademicCalendarEntry support variable periods, without need of subclasses

25.3.0 (21-11-2019)
- Bug Fix: Fixed access to CompetenceCourse details functionality 
- Refactor: Included new access control Permissions to existing AcademicAuthorizations

25.2.3 (20-11-2019)
- Improvement: Add conclusionTitle field in CourseGroup
- Refactor: Added methods for find ExecutionInterval childs

25.2.2 (04-11-2019)
- Bug Fix: Send Registration creation Bennu Signal

25.2.1 (24-10-2019)
- Bug Fix: Fixed students list in teacher portal, when exists attends without enrolment  

25.2.0 (22-10-2019)
- Refactor: Split Registration creation in two services, one to import Registration without the assurance of valid fiscal data, and other which assure fiscal data is valid and customer is created

25.1.5 (21-10-2019)
- Bug Fix: In order to initialize correctly, invoke constructor instead of invoking new

25.1.4 (18-10-2019)
25.1.3 (18-10-2019)
- Improvement: added otherLevel slot to Qualification
- Improvement: Allow migrate physical addresses without check rules

25.1.2 (17-10-2019)
- Bug Fix: added missing error message for duplicated student curricular plan
- Improvement: removed possibility to manage professorships by course responsible teacher

25.1.1 (26-09-2019)
- Bug Fix: on view sent emails, filter inconsistent ExecutionCourseSenders

25.1.0 (25-09-2019)
- New Feature: Profile based access control
- Bug Fix: when sending emails, clean colon characters from senders name

25.0.1 (20-09-2019)
- Bug Fix: Require and validate email in account creation, in Manager Portal

25.0.0 (20-09-2019)
- Refactor: degree structure code cleanup
- Refactor: enrolment and enrolment evaluation code cleanup
- Refactor: registration constructors code cleanup
- Refactor: changed ExecutionCourse domain relation from ExecutionSemester to ExecutionInterval
- Refactor: changed Context domain relations from ExecutionSemester to ExecutionInterval